--- a/index.html
+++ b/index.html
@@ -16,36 +16,65 @@
 
 <body>
     <div class="container">
-        <div class="jumbotron">
-            <h1>Andrey Kovalev</h1>
-            <div class="row">
-                <div class="col-sm-5">
-                    <p class="lead">Amsterdam, Netherlands</p>
-                    <p><a href="tel:+31 6 143 88307">+31 6 143 88307</a>
-                        <br><a href="email:real.andrey.kovalev@gmail.com">real.andrey.kovalev@gmail.com</a>
-                        <br><a href="https://www.linkedin.com/in/avkovalev/">linkedin.com/in/avkovalev/</a>
-                    </p>
-                </div>
-                <div class="col-sm-2">&nbsp;</div>
-                <div class="col-sm-5">
-                    <h5>Competences and skills:</h5>
-                    <dl class="row">
-                        <dt class="col-sm-3">Unix</dt>
-                        <dd class="col-sm-9">System administration, scripting languages (bash, perl), command line tools, networking, database administration</dd>
-                        <dt class="col-sm-3">Cloud:</dt>
-                        <dd class="col-sm-9">AWS Architect Associate diploma. Experience with GCP.</dd>
-                        <dt class="col-sm-3">CI/CD</dt><dd class="col-sm-9">GIT, BitBucket, Docker, Docker-swarm, Terraform, Jenkins</dd>
-                        <dt class="col-sm-3">IT Infrastructure</dt>
-                        <dd class="col-sm-9">Monitoring (nagios, grafana, cacti), NAS, Identity Management and Federation, PKI, VPNs</dd>
-                        <dt class="col-sm-3">Coding</dt><dd class="col-sm-9"><p><strong>Python:</strong> Flask, FastAPI, Pandas, Numpy</p>
-                                            <p><strong>Golang:</strong> web services</p></dd>
-                        <dt class="col-sm-3">Data Science:</dt><dd class="col-sm-9">SQL, Pandas, scikit-learn, pytorch. Model building and evauation, ETL.</dd>
-                    </dl>
+        <div class="row">
+            <div class="col">
+                <div class="card">
+                    <div class="card-header">
+                        <h1>Andrey Kovalev</h1>
+                        <p class="lead">Amsterdam, Netherlands</p>
+                    </div>
+                    <div class="card-subheading">
+                        <ul class="mt-3">
+                            <li><a href="tel:+31 6 143 88307">+31 6 143 88307</a></li>
+                            <li><a href="email:real.andrey.kovalev@gmail.com">real.andrey.kovalev@gmail.com</a></li>
+                            <li><a href="https://www.linkedin.com/in/avkovalev/">linkedin.com/in/avkovalev/</a></li>
+                        </ul>
+                    </div>
+                    <div class="card-body">
+                        Seasoned IT infrastucture / IT Security lead, cloud oriented. Extensive knowledge in Data
+                        Science and Data Analysis.
+                        Vast background in payment and financial sphere.
+                        
+                    </div>
+
+
+                    <div class="card-header">
+                        <h3>Skills:</h3>
+                    </div>
+                    <div class="card-body">
+                        <dl class="row" id="skills_list">
+                            <dt class="col-sm-3">Unix</dt>
+                            <dd class="col-sm-9">System administration, scripting languages (bash, perl),
+                                command line tools, networking, database administration</dd>
+                            <dt class="col-sm-3">Cloud:</dt>
+                            <dd class="col-sm-9">AWS Architect Associate diploma. Experience with GCP.</dd>
+                            <dt class="col-sm-3">CI/CD</dt>
+                            <dd class="col-sm-9">GIT, BitBucket, Docker, Docker-swarm, Terraform, Jenkins</dd>
+                            <dt class="col-sm-3">IT Infrastructure</dt>
+                            <dd class="col-sm-9">Monitoring (nagios, grafana, cacti), NAS, Identity Management
+                                and Federation, PKI, VPNs</dd>
+                            <dt class="col-sm-3">Coding</dt>
+                            <dd class="col-sm-9">
+                                <dl class="row">
+                                    <dt class="col-sm-2">Python:</dt>
+                                    <dd class="col-sm-10">advanced, Flask, FastAPI, Pandas, Numpy</dd>
+                                    <dt class="col-sm-2">C:</dt>
+                                    <dd class="col-sm-10">Microcontroller programming</dd>
+                                    <dt class="col-sm-2">Golang:</dt>
+                                    <dd class="col-sm-10">Studying</dd>
+                                </dl>
+                            </dd>
+                            <dt class="col-sm-3">Data Science and Machine Learning:</dt>
+                            <dd class="col-sm-9">SQL (advanced), Pandas, scikit-learn, pytorch. Model building and
+                                evauation, data preprocessing, visualization (seaborn), ETL.</dd>
+                        </dl>
+                    </div>
                 </div>
             </div>
         </div>
+    </div>
 
 
 </body>
 
-</html
+</html>
