--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <div class="card">
                     <div class="card-header">
                         <h1>Andrey Kovalev</h1>
-                        <p class="lead">Amsterdam, Netherlands</p>
+                        <p class="lead">Amsterdam, Netherlands</li>
                     </div>
                     <div class="card-subheading">
                         <ul class="mt-3">
@@ -34,8 +34,15 @@
                         Seasoned IT infrastucture / IT Security lead, cloud oriented. Extensive knowledge in Data
                         Science and Data Analysis.
                         Vast background in payment and financial sphere.
-                        
+
                     </div>
+                </div>
+            </div>
+        </div>
+        <div class="row mt-2">
+            <div class="col">
+                <div class="card">
+
 
 
                     <div class="card-header">
@@ -45,23 +52,25 @@
                         <dl class="row" id="skills_list">
                             <dt class="col-sm-3">Unix</dt>
                             <dd class="col-sm-9">System administration, scripting languages (bash, perl),
-                                command line tools, networking, database administration</dd>
+                                command line tools, networking (OSPF, BGP), database administration (Postgres, MySQL)</dd>
                             <dt class="col-sm-3">Cloud:</dt>
                             <dd class="col-sm-9">AWS Architect Associate diploma. Experience with GCP.</dd>
                             <dt class="col-sm-3">CI/CD</dt>
                             <dd class="col-sm-9">GIT, BitBucket, Docker, Docker-swarm, Terraform, Jenkins</dd>
                             <dt class="col-sm-3">IT Infrastructure</dt>
                             <dd class="col-sm-9">Monitoring (nagios, grafana, cacti), NAS, Identity Management
-                                and Federation, PKI, VPNs</dd>
+                                and Federation, PKI, VPNs, VoIP</dd>
                             <dt class="col-sm-3">Coding</dt>
                             <dd class="col-sm-9">
                                 <dl class="row">
-                                    <dt class="col-sm-2">Python:</dt>
-                                    <dd class="col-sm-10">advanced, Flask, FastAPI, Pandas, Numpy</dd>
-                                    <dt class="col-sm-2">C:</dt>
-                                    <dd class="col-sm-10">Microcontroller programming</dd>
-                                    <dt class="col-sm-2">Golang:</dt>
-                                    <dd class="col-sm-10">Studying</dd>
+                                    <dt class="col-sm-3">Python:</dt>
+                                    <dd class="col-sm-9">advanced, Flask, FastAPI, Pandas, Numpy</dd>
+                                    <dt class="col-sm-3">JS/CSS/HTML:</dt>
+                                    <dd class="col-sm-9">Web applications, server side</dd>
+                                    <dt class="col-sm-3">C:</dt>
+                                    <dd class="col-sm-9">Microcontroller programming</dd>
+                                    <dt class="col-sm-3">Golang:</dt>
+                                    <dd class="col-sm-9">Studying</dd>
                                 </dl>
                             </dd>
                             <dt class="col-sm-3">Data Science and Machine Learning:</dt>
@@ -72,7 +81,126 @@
                 </div>
             </div>
         </div>
+        <div class="row mt-2">
+            <div class="col">
+                <div class="card">
+                    <div class="card-header">
+                        <h3>Experience</h3>
+                    </div>
+                    <div class="card-title mt-5" id="lnrs">
+                        <div class="XXXlead">
+                            <h5>2016 - current: Technical Account Manager/Technical Consultant at
+                                LexisNexis Risk Solutions (previously ThreatMetrix)</h5>
+                        </div>
+                    </div>
+                    <div class="card-body">
+
+                        <ul>
+                            <li>Pre-sales consulting for key customers</li>
+                            <li>Trusted advisor and technical expert for customers ranged from small ecommerce
+                                to global banks at the implementation and operational phases</li>
+                            <li>Communication with customers both on C-level and technical teams level across EMEA and
+                                APAC</li>
+                            <li>Integration of ThreatMetrix platform with customer’s on-premises and
+                                cloud-based systems, management of integration projects</li>
+                            <li>Proactive monitoring and intervention to ensure the highest level of fraud
+                                detection</li>
+                            <li>Evaluation of fraud detection performance using expert and statistical
+                                approaches</li>
+                            <li>Analysis and investigation of emerging fraud patterns, design and implementation
+                                of countermeasures</li>
+                            <li>AML/KYC solutions based on LNRS products</li>
+                            <li>Creation and delivery of reports and business reviews for customer
+                                top-management</li>
+                            <li>Close interaction with Sales and Products to improve the product based on
+                                customer needs</li>
+                            <li>Design, development and deployment of numerous internal applications
+                                automating routine processes</li>
+                        </ul>
+                    </div>
+
+                    <div class="card-title" id="ymoney">
+                        <div class="XXXlead">
+                            <h5>2007 - 2016: Chief security officer at Yandex.Money. </h5>
+                        </div>
+                    </div>
+                    <div class="card-body">
+                        <ul>
+                            <li>Assumed lead role in building an efficient information security team. Successfully
+                                implemented Personal Data Protection requirements, installed IS management
+                                processes,
+                                has designed and implemented data protection measures. Closely worked with IT
+                                Operations and Development teams to ensure the highest possible level of data
+                                safety.
+                                Led implementation of all the requirements of STO BR IBBS standard - Russian
+                                Information Security Standard for Banks – as well as PCI-DSS and ISO270017</li>
+                            <li>Led a team of 15+ that handled all security-related issues for the payment system.
+                            </li>
+                            <li>Was awarded by the Minister of Internal Affairs for help in prosecuting a large
+                                fraud
+                                network.</li>
+                            <li>Designed and implemented Information Security policy complaint with existing
+                                regulations</li>
+                            <li>Led machine learning adoption project</li>
+                            <li>Designed and implemented infrastructure of payment fraud management (e-money and
+                                plastic), including heuristic customer behaviour analysis, customer device
+                                identification
+                                as well as other advanced technologies.</li>
+                            <li>Achievements included 95% reduction in account takeover fraud as well as reduction
+                                of step-up authentication requests by more than 50%.</li>
+                            <li>Developed requirements and design for internal advanced rule-based antifraud engine.
+                                Built, deployed and maintaned internal reporting and operational tools.</li>
+                        </ul>
+
+
+                    </div>
+
+                    <div class="card-title" id="yandex">
+                        <h5>2005-2007: Chief IT Operations officer at Yandex</h5></div>
+                    <div class="card-body">
+                        <ul> 
+                            <li>Was responsible for transitioning IT
+                        Operations department to process-based, managed and predictable state and for
+                        developing IT strategy</li>
+                        <li>Had adapted and implemented ITIL Operations processes, as well as Change
+                        Management.</li> 
+                        <li>Significantly reduced downtimes, implemented IT Operations budgeting.</li>
+
+                        <li>Was a project lead on developing and implementing high-availability, geographically
+                        distributed IT infrastructure.</li> <li>Lead implementation of multi-site VOIP phone
+                        network (Cisco Call Manager)</li>
+                        </ul>   
+                </div>
+                <div class="card-title" id="beeline">
+                    <h5>2001-2003: Billing Operations Manager at Vimpelcom (Beeline)</h5>
+
+                </div>
+                <div class="card-body">
+                    <ul>
+                        <li>Was responsible for
+                        operation and maintenance of Amdocs Ensemble billing</li>
+                        <li>Led migration projects from other billing systems</li>
+                        <li>Built and led local Billing Support team, obsoleting the
+                        need of expensive vendor on-site support representatives</li>
+
+
+                    </ul>
+                </div>
+            </div>
+        </div>
     </div>
+<div class="row mt-2">
+    <div class="col">
+    <div class="card">
+        <div class="card-header">
+            <h3>Education</h3>
+
+        </div>
+        <div class="card-body">
+            <ul><li>Computer Science at Moscow Institute of Railway Transport (MIIT) (2001)</li></ul>
+        </div>
+    </div></div>
+</div>
 
 
 </body>
