more cloud focus

--- a/v2.html
+++ b/v2.html
@@ -89,9 +89,11 @@
       <h5>+31 6 143 88307</h5>
     </div>
     <div id="section">
-      <p>IT infrastructure / DevOps/ IT Security lead, cloud oriented.  Extensive knowledge in Data Science and Data Analysis.
+      <P>Technical account manager with focus on Security, Clouds, SaaS, DevOps</P>
+      <p>
          Vast background in payment and financial sphere. 
-      <p>I have strong business sense, love challenges and create genuine solution to complex problems. Have experience building and leading strong teams, can work independently.</p>
+      <p>Self-starter with strong analytical mindset, love solving problems and troubleshooting complex issues.</p>
+      <p>Team leader and team worker.</p>
       </p>
     </div>
     <div id="section" , class="row">
@@ -99,11 +101,12 @@
         <!-- SKILLS -->
         <h2>Skills</h2>
         <ul>
-          <li><b>Unix</b><span>- System administration, scripting languages(bash, perl), database administration (Postgres, MySQL)</span></li>
-          <li><b>Cloud</b><span>- AWS Architect Associate diploma. Experience with GCP</span></li>
-          <li><b>DevOps</b><span>- GIT, Bitbucket, Docker, Docker-swarm, Terraform, Jenkins</span></li>
+          <li><b>Unix</b><span>- System administration, scripting languages(bash, perl), database administration (PostgreSQL, MySQL, MongoDB), virtualization</span></li>
+          <li><b>Cloud</b><span>- AWS Architect Associate diploma, practical experience. Experience with GCP</span></li>
+          <li><b>DevOps</b><span>- GIT, Bitbucket, Docker, Docker-swarm, Terraform, Kubernetes</span></li>
           <li><b>Agile</b><span>- Jira, Confluence, Kanban</span></li>
-          <li><b>IT Infrastructure, IT Security</b><span>- Monitoring(nagios, grafana, cacti), NAS, Identity Management and Federation, Networking(OSPF, BGP), PKI, VPNs, Firewalls etc</span></li>
+          <li><b>IT Infrastructure, IT Security</b><span>- Monitoring(nagios, grafana, cacti), NAS, Identity Management and Federation</span></li>
+          <li><b>Networking</b><span>-OSPF, BGP, DNS, DHCP, NAT, Nginx, Apache, firewalls, WAF</span></li>
           <li><b>JS/CCS/HTML</b><span>- Web applications, server side</span></li>
           <li><b>Python</b><span>- advanced: pandas, matplotlib, sklearn, shap, Flask, FastAPI</span></li>
           <li><b>Other languages</b><span>- C, Golang, Perl</span></li>
@@ -143,12 +146,14 @@
         <h4>Technical Account Manager/Technical consultant<span>2016 - Present</span></h4>
 
         <ul>
+          <li>Technical Account Manager  / Trusted Advisor for ThreatMetrix DDP customers</li>
           <li>Presales consulting for key clients.</li>
-          <li>Integration of ThreatMetrix platform with customer's on-premises and cloud-based systems, management of integration projects. Trusted advisor and technical expert for customers ranged from small e-commerce to global banks at the implementation and operational phases.</li>
+          <li>Integration of ThreatMetrix platform with customer's on-premises and cloud-based systems, management of integration projects. Advising and problem solving customers ranged from small e-commerce to global banks at the implementation and operational phases.</li>
           <li>Analysis and investigation of emerging fraud patterns, design and implementation of countermeasures. Evaluation of fraud detection performance using expert and statistical approaches.</li>
           <li>Close interaction with Sales and Products to improve the product based on customer needs</li>
           <li>Development and delivery of reports and proposals on both C-level and technical teams level across EMEA and APAC</li>
-          <li>Design, development and deployment of numerous internal applications automating routine processes</li>
+          <li>Design, development and deployment of numerous internal applications, such as integration specifications manager, automated rules verifier etc. Those tools visibly reduced the number of mistakes and defects.</li>
+          <li>Led knowledge sharing sessions on software development and CI/CD</li>
         </ul>
 
         <h3><a href="https://en.wikipedia.org/wiki/Yandex">Yandex</a><span> 11 years</span></h3>
