--- a/v2.html
+++ b/v2.html
@@ -78,6 +78,7 @@
       border-top: 1px solid #444;
     }
   </style>
+  <title>Andrey Kovalev</title>
 </head>
 
 <body>
@@ -94,6 +95,7 @@
          Vast background in payment and financial sphere. 
       <p>Self-starter with strong analytical mindset, love solving problems and troubleshooting complex issues.</p>
       <p>Team leader and team worker.</p>
+      <p>Tinkerer and troubleshooter - love learning new technologies and make technologies interact</p>
       </p>
     </div>
     <div id="section" , class="row">
@@ -101,16 +103,17 @@
         <!-- SKILLS -->
         <h2>Skills</h2>
         <ul>
-          <li><b>Unix</b><span>- System administration, scripting languages(bash, perl), database administration (PostgreSQL, MySQL, MongoDB), virtualization</span></li>
-          <li><b>Cloud</b><span>- AWS Architect Associate diploma, practical experience. Experience with GCP</span></li>
+          <li><b>Unix</b><span>- System administration, scripting languages(bash, perl), database administration (PostgreSQL, MySQL, MongoDB), virtualization (Vmware, Oracle)</span></li>
+          <li><b>Cloud/SaaS</b><span>- AWS Architect Associate diploma, practical experience. Experience with GCP</span></li>
           <li><b>DevOps</b><span>- GIT, Bitbucket, Docker, Docker-swarm, Terraform, Kubernetes</span></li>
           <li><b>Agile</b><span>- Jira, Confluence, Kanban</span></li>
-          <li><b>IT Infrastructure, IT Security</b><span>- Monitoring(nagios, grafana, cacti), NAS, Identity Management and Federation</span></li>
-          <li><b>Networking</b><span>-OSPF, BGP, DNS, DHCP, NAT, Nginx, Apache, firewalls, WAF</span></li>
+          <li><b>IT Infrastructure, IT Security</b><span>- APIs, REST, Monitoring, NAS, Identity Management, SAML/SSO, Backups</span></li>
+          <li><b>Networking</b><span>-OSPF, BGP, DNS, DHCP, NAT, Nginx, Apache, firewalls, WAF, DLP, SIEM</span></li>
           <li><b>JS/CCS/HTML</b><span>- Web applications, server side</span></li>
-          <li><b>Python</b><span>- advanced: pandas, matplotlib, sklearn, shap, Flask, FastAPI</span></li>
+          <li><b>Python</b><span>- advanced: pandas, matplotlib, scikit-learn, Flask, FastAPI</span></li>
           <li><b>Other languages</b><span>- C, Golang, Perl</span></li>
           <li><b>ETL</b><span>SQL, database architecture, pipelining, query optimization, templating</span></li>
+          <li><b>Mobile</b>iOS and Android SDK implementations, permission management, sensor data analysis</li>
 
           <li><b>Machine Learning</b><span>- xgboost, catboost,
               pyspark,  pytorch, keras, tensorflow, feature engineering</span></li>
@@ -133,7 +136,7 @@
         <ul>
           <li>Computer science, linear, and dynamic programming</li>
           <li>Optimization, computation methods</li>
-          <li>Statistics, probability theory</li>
+        
         </ul>
 
 
@@ -151,8 +154,8 @@
           <li>Integration of ThreatMetrix platform with customer's on-premises and cloud-based systems, management of integration projects. Advising and problem solving customers ranged from small e-commerce to global banks at the implementation and operational phases.</li>
           <li>Analysis and investigation of emerging fraud patterns, design and implementation of countermeasures. Evaluation of fraud detection performance using expert and statistical approaches.</li>
           <li>Close interaction with Sales and Products to improve the product based on customer needs</li>
-          <li>Development and delivery of reports and proposals on both C-level and technical teams level across EMEA and APAC</li>
-          <li>Design, development and deployment of numerous internal applications, such as integration specifications manager, automated rules verifier etc. Those tools visibly reduced the number of mistakes and defects.</li>
+          <li>Conveying technical and business knowledge to stakeholders and technical teams</li>
+          <li>Design, development and containerized (Docker) deployment of numerous internal applications, such as integration specifications manager. Those tools visibly reduced the number of mistakes and defects.</li>
           <li>Led knowledge sharing sessions on software development and CI/CD</li>
         </ul>
 
